<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/form_shape"
            android:padding="10dp"
            android:src="@drawable/arrow_down"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/terms_amp_conditions"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        android:textColor="#5B5B5B"
        android:padding="16dp"

        android:text="@string/termCondition"
        />

    <LinearLayout
        android:id="@+id/termLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/agreeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"

            android:fontFamily="@font/outfit_regular" />

        <LinearLayout
            android:id="@+id/termsConditionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/outfit_regular"
                android:text="@string/I_agree_term"
                android:textAllCaps="false"
                android:textColor="#516634"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/outfit_regular"
                android:text="@string/term_condition"
                android:textAllCaps="false"
                android:textColor="#516634"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
    <Button
        android:id="@+id/agreeAndContinueButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rectangle_button"
        android:fontFamily="@font/outfit_regular"
        android:outlineSpotShadowColor="#516634"
        android:text="@string/agree_and_continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:ignore="UnusedAttribute" />

</LinearLayout>