<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.LoginActivity">

    <ImageView
        android:id="@+id/backButtonLogin"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_gravity="start"
        android:background="@drawable/back_shape_black"
        android:padding="@dimen/_8sdp"
        android:src="@drawable/arrow_back_black" />

    <com.example.lmr.custom.MyCustomTextView
        android:id="@+id/welcomeBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_gravity="center"
        android:gravity="center"
        android:fontFamily="@font/outfit_regular"
        android:text="@string/welcome_back"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_22ssp"
        android:textStyle="bold" />

    <com.example.lmr.custom.MyCustomTextView
        android:id="@+id/signInAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_regular"
        android:gravity="center"
        android:text="@string/sign_in_account"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp" />

    <com.example.lmr.custom.MyCustomEditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/form_shape"
        android:fontFamily="@font/outfit_regular"
        android:hint="@string/email"
        android:paddingHorizontal="@dimen/_14sdp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="#9F9CB0"
        tools:ignore="TextFields" />

    <LinearLayout
        android:id="@+id/termLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/agreeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:background="@color/white"
            android:fontFamily="@font/outfit_regular" />

        <LinearLayout
            android:id="@+id/termsCondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <com.example.lmr.custom.MyCustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/outfit_regular"
                android:text="@string/terms_condition"
                android:textAllCaps="false"
                android:textColor="@color/gry"
                android:textSize="16sp" />

            <com.example.lmr.custom.MyCustomTextView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/outfit_regular"
                android:text="@string/term_condition"
                android:textAllCaps="false"
                android:textColor="@color/gry"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_button_gry"
        android:fontFamily="@font/outfit_regular"
        android:outlineSpotShadowColor="#516634"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:ignore="UnusedAttribute" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:id="@+id/divider1"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/_16ssp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16ssp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@android:color/darker_gray" />

        <com.example.lmr.custom.MyCustomTextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_regular"
            android:text="@string/or_continue"
            android:textAllCaps="false"
            android:textColor="#5B5B5B"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider2"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@android:color/darker_gray" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signWithGoogle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/sign_border"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/google" />

        <com.example.lmr.custom.MyCustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#F0EFF2"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/outfit_regular"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/sign_in_google"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/sign_border"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/microsoft" />

        <com.example.lmr.custom.MyCustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#F0EFF2"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/outfit_regular"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/sign_in_outlook"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/sign_border"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/facebook" />

        <com.example.lmr.custom.MyCustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#F0EFF2"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/outfit_regular"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/sign_in_facebook"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/sign_border"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/apple" />

        <com.example.lmr.custom.MyCustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#F0EFF2"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/outfit_regular"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/sign_in_apple"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

</LinearLayout>